# chunk-diff

./: .gitignore  Cargo.toml  README.md
benches/: encode.rs
src/: lib.rs
src/encoder/: config.rs  mod.rs
src/frame/: changed.rs  mod.rs
src/hasher/: mod.rs  xxhash.rs
src/test/: chunk.rs  encoder.rs  hasher.rs  mod.rs
src/util/: chunk.rs  mod.rs  point.rs  rect.rs
