[package]
name = "chunk-diff"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
twox-hash = "2.1.0"
num-integer = "0.1"
serde = { version = "1.0.216", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = { version = "0.8.5", features = ["std", "std_rng"] }

[[bench]]
name = "encode"
harness = false
