[package]
name = "chunk-diff"
version = "0.1.0"
edition = "2021"
authors = ["Miyamizu Mitsuha <miyammitsuha@gmail.com>"]
description = "A fast and memory-efficient library for computing the difference between two frames of rect."
readme = "README.md"
keywords = ["hash", "hasher", "video", "frame", "diff", "chunk", "chunk-diff"]
categories = ["algorithms"]
repository = "https://github.com/MMitsuha/chunk-diff"
license = "MIT"

[dependencies]
rayon = "1.10.0"
twox-hash = "2.1.0"
num-integer = "0.1"
serde = { version = "1.0.216", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = { version = "0.8.5", features = ["std", "std_rng"] }

[[bench]]
name = "encode"
harness = false
